@@ -849,6 +849,10 @@ public:
     popid_labels_user,
     popid_labels_useronly,
     popid_labels_autogenerated,
+    popid_digits_20,
+    popid_digits_50,
+    popid_digits_100,
+    popid_digits_all,
     popid_image,
     popid_svg,
     popid_emf,
