@@ -4604,6 +4604,34 @@ void wxMaxima::EditMenu(wxCommandEvent &event)
 
   switch (event.GetId())
   {
+  case Worksheet::popid_digits_20:
+  {
+    m_worksheet->m_configuration->SetDisplayedDigits(15);
+    m_worksheet->RecalculateForce();
+    m_worksheet->RequestRedraw();
+    break;
+  }
+  case Worksheet::popid_digits_50:
+  {
+    m_worksheet->m_configuration->SetDisplayedDigits(30);
+    m_worksheet->RecalculateForce();
+    m_worksheet->RequestRedraw();
+    break;
+  }
+  case Worksheet::popid_digits_100:
+  {
+    m_worksheet->m_configuration->SetDisplayedDigits(100);
+    m_worksheet->RecalculateForce();
+    m_worksheet->RequestRedraw();
+    break;
+  }
+  case Worksheet::popid_digits_all:
+  {
+    m_worksheet->m_configuration->SetDisplayedDigits(0);
+    m_worksheet->RecalculateForce();
+    m_worksheet->RequestRedraw();
+    break;
+  }
   case Worksheet::popid_labels_autogenerated:
   {
     m_worksheet->m_configuration->SetLabelChoice(Configuration::labels_automatic);
@@ -8977,6 +9005,10 @@ BEGIN_EVENT_TABLE(wxMaxima, wxFrame)
                 EVT_MENU(menu_zoom_150, wxMaxima::EditMenu)
                 EVT_MENU(menu_zoom_200, wxMaxima::EditMenu)
                 EVT_MENU(menu_zoom_300, wxMaxima::EditMenu)
+                EVT_MENU(Worksheet::popid_digits_all, wxMaxima::EditMenu)
+                EVT_MENU(Worksheet::popid_digits_20, wxMaxima::EditMenu)
+                EVT_MENU(Worksheet::popid_digits_50, wxMaxima::EditMenu)
+                EVT_MENU(Worksheet::popid_digits_100, wxMaxima::EditMenu)
                 EVT_MENU(Worksheet::popid_labels_autogenerated, wxMaxima::EditMenu)
                 EVT_MENU(Worksheet::popid_labels_user, wxMaxima::EditMenu)
                 EVT_MENU(Worksheet::popid_labels_useronly, wxMaxima::EditMenu)
