@@ -7,6 +7,7 @@ Current:
   * If autosave on closing fails: Allow the user to ask to exit anyway
   * Enable Autosave even if the option to keep the file saved is disabled
   * A context menu with the "display labels" choices
+  * A context menu with "max number of digits" choices
   * A speedup by preventing recursive calls to resize functions
   * Corrected parametric plots in the plot wizard
 
